# image-safety-classifier-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: clip_train.yaml
data/samples/: annotations.jsonl
scripts/: generate_samples.py
serve/: app.py
src/pipeline/: __init__.py  clean.py  cli.py  embed.py  eval.py  ingest.py  schemas.py  train.py
tests/: test_pipeline.py
