[project]
name = "image-safety-classifier-pipeline"
version = "0.1.0"
description = "End-to-end image safety classifier workflow demo: annotation ingest, image QA, CLIP-embedding + fastai linear-probe training on GPU, precision-recall-curve-tuned evaluation, and a small inference API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pandas>=2.0",
    "torch>=2.12.0",
    "fastai>=2.7",
    "transformers>=4.40",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.25",
]

[project.scripts]
run-pipeline = "pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
